--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button id="compose-btn"><i class="fas fa-edit"></i> Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
