added error message that slides into view and slides out when form properly submitted

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+        <p id="tweet-error"></p>
       </section>
       <section class="tweet-container">
       
