--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <h2>Compose Tweet</h2>
         <form id="tweet-submit" method="POST" action="/tweets">
           <textarea id="new-tweet-textarea" name="text" placeholder="What are you humming about?"></textarea>
-          <input type="submit" value="Tweet">
+          <input id="new-tweet-btn" type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
         <p id="tweet-error"></p>
